--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <header class="site-header">
         <div class="header-container">
-            <h1 class="logo">黒子新桜鉄道 <span class="en-name">KNR</span></h1>
+            <h1 class="logo">
+                <a href="#home">
+                    <img src="KNR_logo.png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
+                </a>
+            </h1>
             <div class="header-right">
                 <div id="current-time" class="clock-display">00:00:00</div>
                 <button class="menu-toggle" aria-expanded="false">
@@ -28,7 +32,7 @@
             </nav>
         </div>
     </header>
-
+    
     <main>
         <section class="hero-section">
             <div class="hero-content">
