--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <h1 class="logo">
                 <a href="#home">
-                    <img src="KNR_logo.png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
+                    <img src="KNR 黒子新桜鉄道 (2).png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
                 </a>
             </h1>
             <div class="header-right">
