--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <h3>路線図</h3>
             
             <div class="tabs">
-                <button class="tab-btn active" data-target="line-kuroko">黒子本線 [K]</button>
+                <button class="tab-btn active" data-target="line-hirosaki">広崎新幹線［HS］</button>
                 <button class="tab-btn" data-target="line-sakura">桜ノ宮線 [S]</button>
             </div>
 
             <div class="route-map-wrapper">
-                <div id="line-kuroko" class="route-map-container active">
+                <div id="line-hirosaki" class="route-map-container active">
                     <ul class="route-map">
                         <li class="station-item">
-                            <span class="station-number">K01</span>
+                            <span class="station-number">HS-01</span>
                             <div class="station-dot big"></div>
-                            <div class="station-name"><ruby>黒子中央<rt>くろこちゅうおう</rt></ruby></div>
+                            <div class="station-name"><ruby>白野<rt>しらの</rt></ruby></div>
                         </li>
                         <li class="station-item">
                             <span class="station-number">K02</span>
