--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>黒子新桜鉄道 | 公式サイト</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;700&display=swap" rel="stylesheet">
+</head>
 <body>
 
     <header class="site-header">
         <div class="header-container">
             <h1 class="logo">
                 <a href="#home">
-                    <img src="KNR 黒子新桜鉄道 (2).png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
+                    <img src="KNR_logo.png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
                 </a>
             </h1>
             <div class="header-right">
@@ -27,6 +34,24 @@
     </header>
 
     <main>
+        <section class="hero-section" id="home">
+            <div class="hero-content">
+                <h2>新緑の風、鉄路を駆ける。</h2>
+                <p>都市と自然を繋ぐ、黒子新桜のネットワーク。</p>
+            </div>
+        </section>
+
+        <section id="status" class="content-section">
+            <h3>運行情報</h3>
+            <div class="status-card normal">
+                <div class="status-icon">◎ 平常</div>
+                <div class="status-details">
+                    <h4>全線平常通り</h4>
+                    <p>現在、遅れや運休の情報はありません。</p>
+                </div>
+            </div>
+        </section>
+
         <section id="stations" class="content-section stations-section">
             <h3>路線図</h3>
             
@@ -58,10 +83,11 @@
                 </div>
             </div>
         </section>
-        
+
     </main>
 
-    <footer class="site-footer">
+    <footer class="site-footer" id="contact">
+        <p>窓口情報: お問い合わせは0120-XXX-XXXまで</p>
         <p>© 2025 黒子新桜鉄道 KNR.</p>
     </footer>
 
