--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>黒子新桜鉄道 | 公式サイト</title>
+    <title>広崎鉄道 | 公式サイト</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <div class="header-container">
             <h1 class="logo">
                 <a href="#home">
-                    <img src="KNR_logo.png" alt="黒子新桜鉄道 KNR 公式サイト" class="logo-img">
+                    <img src="KNR_logo.png" alt="広崎鉄道 公式サイト" class="logo-img">
                 </a>
             </h1>
             <div class="header-right">
@@ -36,8 +36,8 @@
     <main>
         <section class="hero-section" id="home">
             <div class="hero-content">
-                <h2>新緑の風、鉄路を駆ける。</h2>
-                <p>都市と自然を繋ぐ、黒子新桜のネットワーク。</p>
+                <h2>都市と自然を繋ぐ、広崎のネットワーク。</h2>
+                <p>広崎新幹線、広崎メトロでお出かけください。</p>
             </div>
         </section>
 
@@ -64,7 +64,7 @@
 
         <section id="fare" class="content-section fare-section">
             <h3>運賃検索</h3>
-            <p class="section-lead">始発駅「黒子中央 (K01)」からの運賃を確認できます。</p>
+            <p class="section-lead">始発駅「白野 (H-01)」からの運賃を確認できます。</p>
             
             <div class="fare-calculator">
                 <div class="fare-input">
@@ -88,7 +88,7 @@
 
     <footer class="site-footer" id="contact">
         <p>窓口情報: お問い合わせは0120-XXX-XXXまで</p>
-        <p>© 2025 黒子新桜鉄道 KNR.</p>
+        <p>© 2025 広崎鉄道.</p>
     </footer>
 
     <script src="script.js"></script>
