--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>広崎鉄道 | 公式サイト</title>
+    <title>黒子新桜鉄道 | 公式サイト</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <div class="header-container">
             <h1 class="logo">
                 <a href="#home">
-                    <img src="KNR_logo.png" alt="広崎鉄道 公式サイト" class="logo-img">
+                    <img src="KNR_logo.png" alt="黒子新桜鉄道 公式サイト" class="logo-img">
                 </a>
             </h1>
             <div class="header-right">
